LIB-343 Attempt to fix media/caption/alignment display/preview issues

--- a/custom/themes/lib_unb_ca/ckeditor_stylesheets/overrides.css
+++ b/custom/themes/lib_unb_ca/ckeditor_stylesheets/overrides.css
@@ -12,5 +12,8 @@ strong,
     font-weight: bold;
 }
 drupal-media {
-  display: initial;
+  display: block!important;
+}
+drupal-media > div {
+  min-width: 66%;
 }
