--- a/custom/themes/lib_unb_ca/src/scss/overrides/_media.scss
+++ b/custom/themes/lib_unb_ca/src/scss/overrides/_media.scss
@@ -1,23 +1,14 @@
-/* Core Media Adjustments re: Remote Video */
-figure {
-  &.caption,
-  &.caption > figcaption {
-    display: block;
-  }
-
-  &.caption img {
-    margin-bottom: 0;
-  }
-}
 /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 .field--name-field-media-oembed-video {
   position: relative;
   overflow: hidden;
   width: 100%;
   padding-top: 56.25%;
+  padding-bottom: 1rem;
 }
 /* Style iframe to fit in the container div with full height and width */
 .media-oembed-content {
+  padding-bottom: 1rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -25,4 +16,27 @@ figure {
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+/* Core Media Adjustments re: Remote Video */
+figure {
+  .media-oembed-content {
+    padding-bottom: 0;
+  }
+
+  &.caption,
+  &.caption > figcaption {
+    display: block;
+  }
+
+  &.caption {
+    &.align-left,
+    &.align-right {
+      min-width: 66%;
+    }
+
+    img {
+      margin-bottom: 0;
+    }
+  }
 }
